1.4.25.dev
==================================================

- fix issue52: vaguely fix py25 compat of py.path.local (it's not
  officially supported), also fix docs

1.4.24
==================================================

- Fix retrieving source when an else: line has an other statement on
  the same line.

- add localpath read_text/write_text/read_bytes/write_bytes methods
  as shortcuts and clearer bytes/text interfaces for read/write.
  Adapted from a PR from Paul Moore.


1.4.23
==================================================

- use newer apipkg version which makes attribute access on
  alias modules resolve to None rather than an ImportError.
  This helps with code that uses inspect.getframeinfo()
  on py34 which causes a complete walk on sys.modules
  thus triggering the alias module to resolve and blowing
  up with ImportError.  The negative side is that something
  like "py.test.X" will now result in None instead of "importerror: pytest"
  if pytest is not installed.  But you shouldn't import "py.test" 
  anyway anymore.

- adapt one svn test to only check for any exception instead 
  of specific ones because different svn versions cause different
  errors and we don't care.


1.4.22
==================================================

- refactor class-level registry on ForkedFunc child start/finish
  event to become instance based (i.e. passed into the constructor)

1.4.21
==================================================

- ForkedFunc now has class-level register_on_start/on_exit()
  methods to allow adding information in the boxed process.
  Thanks Marc Schlaich.

- ForkedFunc in the child opens in "auto-flush" mode for
  stdout/stderr so that when a subprocess dies you can see
  its output even if it didn't flush itself.

- refactor traceback generation in light of pytest issue 364
  (shortening tracebacks).   you can now set a new traceback style 
  on a per-entry basis such that a caller can force entries to be 